fixed lombok @Builder.Default warnings when packaging