@@ -1,20 +1,26 @@
 package ro.pizzeriaq.qservices.service;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
-import java.nio.file.Files;
+import java.io.InputStream;
 import java.util.Base64;
 
 @Service
 public class ImageManagementService {
 
+	private static final Logger logger = LoggerFactory.getLogger(ImageManagementService.class);
+
 	private final String folderPath = "static/images/";
 
 
 	private byte[] readImage(String imageName) throws IOException {
-		return Files.readAllBytes(new ClassPathResource(folderPath + imageName).getFile().toPath());
+		try (InputStream inputStream = new ClassPathResource(folderPath + imageName).getInputStream()) {
+			return inputStream.readAllBytes();
+		}
 	}
 
 
@@ -38,15 +44,12 @@ public class ImageManagementService {
 			byte[] image = readImage(imageName);
 			return getBase64Prefix(imageName) + encodeImageData(image);
 		} catch (IOException e) {
+			logger.error("Image not found: {}", imageName);
 			return null;
 		}
 	}
 
 	public boolean imageExists(String imageName) {
-		try {
-			return Files.exists(new ClassPathResource(folderPath + imageName).getFile().toPath());
-		} catch (IOException e) {
-			return false;
-		}
+		return new ClassPathResource(folderPath + imageName).exists();
 	}
 }
